# pydep

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: main.rs
