[build-system]
requires = ["maturin>=1.3,<2.0", "patchelf"]
build-backend = "maturin"

[project]
name = "pydep"
authors = [
    { name = "DataLuxe Technologies", email = "contato@gmail.com" }
]
description = "Compares the contents of requirement files (requirements*.txt and pyproject.toml) with the output of `pip freeze`"
requires-python = ">=3.11"
keywords = ["rust", "cli", "python", "pip"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  'requests < 3',
]

[project.optional-dependencies]
tests = [
  'pytest',
]

[tool.maturin]
features = ["pyo3/extension-module"]